# tesseract

./: .clang-format  .clang-tidy  .cmake-format  .github_actions_api_docs.yml  .github_actions_benchmarking.yml  .github_actions_nightly.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .run-clang-format  .run-cpack  .run_combine_benchmark_results  .travis.sh  .travis.yml  .travis_utils.sh  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  IDENTITY_BENCHMARKS.md  IDENTITY_DESIGN.md  IDENTITY_MIGRATION.md  LICENSE  LICENSE.BSD-2-Clause  LICENSE.BSD-3-Clause  MIGRATION.md  MIGRATION_GUIDE.md  README.md  codecov.yml  dependencies.repos  dependencies.rosinstall  dependencies_focal.repos  dependencies_jammy.repos  dependencies_with_ext.repos  dependencies_with_ext.rosinstall  doxygen.config  glass_up_right_results.txt  mine_package_info.py  package.xml  tesseract_installer.py
collision/: CMakeLists.txt
collision/bullet/: CMakeLists.txt
collision/core/: CMakeLists.txt
collision/examples/: CMakeLists.txt  box_box_example.cpp
collision/fcl/: CMakeLists.txt
collision/test/: CMakeLists.txt  collision_batched_transform_unit.cpp  collision_box_box_cast_unit.cpp  collision_box_box_unit.cpp  collision_box_capsule_unit.cpp  collision_box_cone_unit.cpp  collision_box_cylinder_unit.cpp  collision_box_sphere_unit.cpp  collision_clone_unit.cpp  collision_compound_compound_unit.cpp  collision_compound_mesh_sphere_unit.cpp  collision_core_unit.cpp  collision_large_dataset_unit.cpp  collision_mesh_mesh_unit.cpp  collision_multi_threaded_unit.cpp  collision_octomap_mesh_unit.cpp  collision_octomap_octomap_unit.cpp  collision_octomap_sphere_unit.cpp  collision_sdf_mesh_unit.cpp  collision_signed_distance_field_unit.cpp  collision_sphere_sphere_cast_unit.cpp  collision_sphere_sphere_unit.cpp  contact_manager_plugins.yaml  contact_managers_config_unit.cpp  contact_managers_factory_static_unit.cpp  contact_managers_factory_unit.cpp  contact_managers_schema_unit.cpp  convex_concave_unit.cpp  get_collision_objects_transform_unit.cpp
collision/test_suite/: CMakeLists.txt
collision/vhacd/: CMakeLists.txt
common/: CMakeLists.txt
common/cmake/: FindTinyXML2.cmake  Findtcmalloc.cmake  common-config.cmake.in  tesseract_macros.cmake
common/examples/: CMakeLists.txt  property_tree_advanced_example.cpp  property_tree_basic_example.cpp  property_tree_derived_types_example.cpp  property_tree_oneof_example.cpp  property_tree_polymorphic_example.cpp
common/src/: allowed_collision_matrix.cpp  any_poly.cpp  calibration_info.cpp  cereal_serialization.cpp  collision_margin_data.cpp  contact_allowed_validator.cpp  joint_state.cpp  kinematic_limits.cpp  manipulator_info.cpp  plugin_info.cpp  ply_io.cpp  profile.cpp  profile_dictionary.cpp  profile_plugin_factory.cpp  property_tree.cpp  resource_locator.cpp  schema_registration.cpp  schema_registry.cpp  stopwatch.cpp  timer.cpp  types.cpp  utils.cpp  yaml_extensions.cpp  yaml_utils.cpp
common/test/: CMakeLists.txt  clone_cache_unit.cpp  name_id_testing.h  name_id_unit.cpp  plugin_loader_unit.cpp  profile_plugin_factory_unit.cpp  property_tree_unit.cpp  resource_locator_unit.cpp  tesseract_common_serialization_unit.cpp  tesseract_common_unit.cpp  test_profile.h  test_profile_factory.cpp  utils_unit.cpp
environment/: CMakeLists.txt
environment/src/: cereal_serialization.cpp  command.cpp  environment.cpp  environment_cache.cpp  environment_monitor.cpp  environment_monitor_interface.cpp  events.cpp  utils.cpp
environment/test/: CMakeLists.txt  tesseract_environment_cache_unit.cpp  tesseract_environment_collision.cpp  tesseract_environment_serialization_unit.cpp  tesseract_environment_unit.cpp  tesseract_environment_utils.cpp
geometry/: CHANGELOG.rst  CMakeLists.txt
geometry/cmake/: geometry-config.cmake.in
geometry/examples/: CMakeLists.txt  create_geometries_example.cpp  parse_mesh_example.cpp
geometry/src/: cereal_serialization.cpp  conversions.cpp  geometry.cpp  utils.cpp
geometry/test/: CMakeLists.txt  tesseract_geometry_serialization_unit.cpp  tesseract_geometry_unit.cpp
kinematics/: CMakeLists.txt
kinematics/core/: CMakeLists.txt
kinematics/ikfast/: CMakeLists.txt
kinematics/kdl/: CMakeLists.txt
kinematics/opw/: CMakeLists.txt
kinematics/test/: CMakeLists.txt  abb_irb2400_ikfast_kinematics.cpp  abb_irb2400_ikfast_solver.hpp  iiwa7_ikfast_kinematics.cpp  iiwa7_ikfast_solver.hpp  ikfast_kinematics_7dof_unit.cpp  ikfast_kinematics_unit.cpp  kdl_kinematics_unit.cpp  kinematics_core_unit.cpp  kinematics_factory_unit.cpp  kinematics_test_utils.h  opw_kinematics_unit.cpp  rep_kinematics_unit.cpp  rop_kinematics_unit.cpp  rtp_kinematics_unit.cpp  ur_kinematics_unit.cpp
kinematics/ur/: CMakeLists.txt
scene_graph/: CMakeLists.txt
scene_graph/examples/: CMakeLists.txt  build_scene_graph_example.cpp
scene_graph/src/: graph.cpp  joint.cpp  kdl_parser.cpp  link.cpp  scene_state.cpp
scene_graph/test/: CMakeLists.txt  tesseract_scene_graph_joint_unit.cpp  (+3 more)
srdf/: CMakeLists.txt
state_solver/: CHANGELOG.rst  CMakeLists.txt
support/: CHANGELOG.rst  CMakeLists.txt
tesseract_collision/: CHANGELOG.rst  CMakeLists.txt  package.xml  tesseract_collision_bullet_plugin_description.xml  tesseract_collision_fcl_plugin_description.xml
tesseract_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
tesseract_core/: CMakeLists.txt  package.xml
tesseract_environment/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
tesseract_ext/: CMakeLists.txt  package.xml
tesseract_geometry/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
tesseract_kinematics/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
tesseract_monitoring/: CMakeLists.txt  package.xml
tesseract_planning/: CMakeLists.txt  package.xml
tesseract_ros/: CMakeLists.txt  package.xml  tesseract_collision_bullet_plugin_description.xml  tesseract_collision_fcl_plugin_description.xml
tesseract_scene_graph/: CHANGELOG.rst  CMakeLists.txt  package.xml
tesseract_srdf/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
(+3115 files in other folders)
